Finished GBC page

--- a/recipes/green-bean-casserole.html
+++ b/recipes/green-bean-casserole.html
@@ -8,5 +8,27 @@
 </head>
 <body>
     <h1>Green Bean Casserole</h1>
+    <img src="../images/greenbeencasserole.jpeg" alt="Green Bean Casserole" width="700" height="700">
+    <h2>Description</h2>
+    <p>
+        Created by Campbell Test Kitchen Manager Dorcas Reilly in 1955, its creamy, smooth sauce and 
+        unmatchable flavor combined with its simplicity makes Green Bean Casserole so appealing. 
+        Just five ingredients and 10 minutes to put together, this family pleasing side has been a 
+        favorite for over 60 years.
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 can (10 1/2 ounces) Campbell’s® Condensed Cream of Mushroom Soup <strong>or</strong> 98% Fat Free Cream of Mushroom Soup <strong>or</strong> Condensed Unsalted Cream of Mushroom Soup </li>
+        <li>1/2 cup milk</li>
+        <li>1 teaspoon soy sauce</li>
+        <li>4 cups cooked cut green beans</li>
+        <li>1 1/3 cups French's® French Fried Onions (amount divided in recipe steps below)</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Heat the oven to 350°F.  Stir the soup, milk, soy sauce, beans and 2/3 cup onions in a 1 1/2-quart casserole.  Season the mixture with salt and pepper.</li>
+        <li>Bake for 25 minutes or until hot.  Stir the bean mixture.  Sprinkle with the remaining 2/3 cup onions.</li>
+        <li>Bake for another 5 minutes or until the onions are golden brown.</li>
+    </ol>
 </body>
 </html>
