added home button to recipies. Created Squach page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/green-bean-casserole.html">Green Bean Casserole</a>
+    <a href="recipes/green-bean-casserole.html">Green Bean Casserole</a><br>
+    <a href="recipes/squash.html">Roasted Butternut Squash</a>
 </body>
 </html>
