--- a/recipes/green-bean-casserole.html
+++ b/recipes/green-bean-casserole.html
@@ -30,5 +30,6 @@
         <li>Bake for 25 minutes or until hot.  Stir the bean mixture.  Sprinkle with the remaining 2/3 cup onions.</li>
         <li>Bake for another 5 minutes or until the onions are golden brown.</li>
     </ol>
+    <a href="../index.html">Home</a>
 </body>
 </html>
