--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Recipes</title>
 </head>
 <body>
+    <img src="./images/odin.jpg" alt="Odin">
     <h1>Odin Recipes</h1>
-    <a href="recipes/green-bean-casserole.html">Green Bean Casserole</a><br>
-    <a href="recipes/squash.html">Roasted Butternut Squash</a>
+    <ul>
+        <li><a href="recipes/green-bean-casserole.html">Green Bean Casserole</a></li>
+        <li><a href="recipes/squash.html">Roasted Butternut Squash</a></li>
+        <li><a href="recipes/cranberry-sauce.html">Cranberry Sauce</a></li>
+    </ul>
 </body>
 </html>
